--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -40,7 +41,6 @@ instance/
 
 # pyenv
 .python-version
-
 
 # Environments
 .env
